plplot (5.5.2-1) experimental; urgency=low

  NOT YET RELEASED !

  * New uspstream release (development branch, hence the upload to
    experiemntal).
  * The plplot9-driver-gnome package is replaced by plplot9-driver-gcw.

 --

plplot (5.3.1-4) unstable; urgency=low

  * debian/rules: Added --with-freefont option to configure
  * debian/control:
    - plplot9-driver-gd recommends now the ttf-freefont package
    - libplplot-dev depends on libplplot-c++9, avoiding broken link
      /usr/lib/libplplotcxxd.so (closes: #303830)

 -- Rafael Laboissiere <rafael@debian.org>  Sat,  9 Apr 2005 11:03:11 +0200

plplot (5.3.1.cvs.20040822-0.sarge.1) unstable; urgency=low

  * Build on Debian testing (NOT OFFICIALLY RELEASED!).

 -- Rafael Laboissiere <rafael@debian.org>  Sun, 22 Aug 2004 20:56:09 +0200

plplot (5.3.1.cvs-1) unstable; urgency=low

  * New upstream release (DEBIAN PACKAGES NOT YET RELEASED!!!). A Java
    binding package is created (libplplot9-java).
  * debian/libplplot9-java.files: New dh_movefiles file containing the files
    for the Java package.
  * debian/rules: Enable java build.  Give option --enable-java to configure
    and use variable $(javasetup) to specify the --with-java-home option when
    building the package with kaffe
  * debian/control: Add Java releated packages to Build-Depends.  Create
    entry for the libplplot9-java binary package.

 -- Rafael Laboissiere <rafael@debian.org>  Fri,  2 Jul 2004 18:12:40 +0200

plplot (5.3.1-3) unstable; urgency=low

  * Rebuild against Octave 2.1.66
  * debian/control:
    - Build-depends on octave2.1-headers (>= 2.1.65)
    - Fixed typo in description of libcsiro0 package (closes: #284381)
    - Made the libplplot9 package suggest all the driver packages,
      including plplot-tcl, which contains the Tk driver (closes: #285193)
    - Droped several dependencies on libplplot9 (= ${Source-Version}),
      which were causing lintian to complain
  * debian-rules: