@@ -11,7 +11,7 @@ Architecture: any
 Section: libs
 Conflicts: libplplot5, plplot (<< 5)
 Depends: ${shlibs:Depends}
-Suggests: plplot9-driver-xwin, plplot9-driver-gcw, plplot9-driver-gd, plplot-tcl
+Suggests: plplot9-driver-xwin, plplot9-driver-gnome2, plplot9-driver-gd, plplot-tcl
 Description: Scientific plotting library
  PLplot is relatively small, portable, freely distributable, and is rich
  enough to satisfy most users.  It has a wide range of plot types including
@@ -30,7 +30,7 @@ Package: libplplot-dev
 Architecture: any
 Section: libdevel
 Recommends: pkg-config
-Depends: libplplot9 (= ${Source-Version}), libplplot-c++9 (= ${Source-Version}), libqhull-dev, libfreetype6-dev, libltdl3-dev
+Depends: libplplot9 (= ${Source-Version}), libplplot-c++9 (= ${Source-Version}), libqhull-dev, libfreetype6-dev, libltdl3-dev, plplot9-driver-gnome2
 Description: Scientific plotting library (development files)
  This package contains all that is needed for doing development in C, C++,
  and Fortran with PLplot, a scientific plotting library.  Examples of
@@ -97,7 +97,7 @@ Description: Scientific plotting library (X11 driver)
  .
  Homepage: http://www.plplot.org
 
-Package: plplot9-driver-gcw
+Package: plplot9-driver-gnome2
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}
@@ -158,6 +158,17 @@ Description: Python support for PLplot, a plotting library
  .
  Homepage: http://www.plplot.org
 
+Package: python-plplot-gnome2
+Architecture: any
+Section: python
+Depends: ${shlibs:Depends}, python-plplot
+Description: Python support for PLplot, a plotting library
+ This package allows the use of the plplotcanvas widget in the PLplot
+ scientific plotting library Python applications.  Examples are also
+ provided.
+ .
+ Homepage: http://www.plplot.org
+
 Package: octave-plplot
 Architecture: any
 Priority: extra
@@ -184,8 +195,8 @@ Description: Documentation for PLplot, a plotting library
 Package: libplplot9-java
 Architecture: any
 Section: libs
-Depends: java1-runtime | java2-runtime, libplplot9 (= ${Source-Version}), ${shlibs:Depends}
-Recommends: java-compiler
+Depends: gcj-3.4 | java1-runtime | java2-runtime, ${shlibs:Depends}
+Recommends: gcj-3.4 | java-compiler
 Description: Java binding for PLplot, a plotting library
  This package contains the Java binding for PLplot, a plotting library.
  .
