@@ -1,2 +1,0 @@
-usr/lib/plplot*/driversd/libgcw.*
-usr/share/doc/plplot9-driver-gcw
