@@ -1,0 +1,3 @@
+usr/lib/libplplotgnome2d.so.*
+usr/lib/plplot*/driversd/gcw.*
+usr/share/doc/plplot9-driver-gnome2
