@@ -3,8 +3,11 @@ plplot (5.5.2-1) experimental; urgency=low
   NOT YET RELEASED !
 
   * New uspstream release (development branch, hence the upload to
-    experiemntal).
-  * The plplot9-driver-gnome package is replaced by plplot9-driver-gcw.
+    experimental).
+  * The plplot9-driver-gnome package is replaced by plplot9-driver-gnome2,
+    which contain the new gcw driver and the liplplpotgnome2 libary.
+  * The new package python-plplot-gnome2 contains the glue code for using
+    libplplotgnome2 with Python.
 
  --
 
